[package]
name = "runner"
description = "A practical application runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
fuzzy-matcher = "0.3.7"
sdl2 = { version = "0.36.0", features = ["ttf"] }
