[package]
name = "practicalrunner"
description = "A practical application runner"
version = "0.1.1"
authors = ["409"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/4-0-9/practical-runner"
repository = "https://github.com/4-0-9/practical-runner"
readme = "README.md"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
fontconfig = "0.8.0"
fuzzy-matcher = "0.3.7"
home = "0.5.9"
sdl2 = { version = "0.36.0", features = ["ttf"] }
